fixed an error styling the display box on firefox

--- a/client/styles.css
+++ b/client/styles.css
@@ -27,7 +27,7 @@ body {
 }
 
 .displayBox {
-    overflow: overlay;
+    overflow: auto;
     padding-top: 10px;
 }
 
